[gd_scene load_steps=3 format=2]

[ext_resource path="res://ScriptEditScreen.gd" type="Script" id=1]
[ext_resource path="res://EventSelectionInterface.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.235294, 0.215686, 0.290196, 1 )

[node name="VBC" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Background/VBC"]
margin_right = 1366.0
margin_bottom = 14.0
text = "Script Editor"
align = 1

[node name="HBC" type="HBoxContainer" parent="Background/VBC"]
margin_top = 18.0
margin_right = 1366.0
margin_bottom = 736.0
size_flags_vertical = 3

[node name="VBC1" type="VBoxContainer" parent="Background/VBC/HBC"]
margin_right = 908.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScriptDisplay" type="Tree" parent="Background/VBC/HBC/VBC1"]
margin_right = 908.0
margin_bottom = 571.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/relationship_line_color = Color( 0.784314, 0.784314, 0.784314, 0.784314 )
custom_constants/draw_relationship_lines = 1

[node name="OperatorEditPanel" type="ColorRect" parent="Background/VBC/HBC/VBC1"]
margin_top = 575.0
margin_right = 908.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25
color = Color( 0.14902, 0.156863, 0.258824, 1 )

[node name="AvailableOperatorList" type="ItemList" parent="Background/VBC/HBC"]
margin_left = 912.0
margin_right = 1366.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="EventSelectionDialog" type="ConfirmationDialog" parent="."]
margin_right = 300.0
margin_bottom = 256.0
rect_min_size = Vector2( 256, 256 )
resizable = true

[node name="EventSelectionInterface" parent="EventSelectionDialog" instance=ExtResource( 2 )]
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[connection signal="item_selected" from="Background/VBC/HBC/VBC1/ScriptDisplay" to="." method="_on_ScriptDisplay_item_selected"]
[connection signal="item_activated" from="Background/VBC/HBC/AvailableOperatorList" to="." method="_on_AvailableOperatorList_item_activated"]
[connection signal="confirmed" from="EventSelectionDialog" to="." method="_on_EventSelectionDialog_confirmed"]
